# maango-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
deploy/: README.md  deploy.sh
docs/: PROMOTIONAL_COPY.md
src/maango_mcp/: client.py  server.py
tests/: conftest.py  test_client.py  test_decision_tree.py  test_resilience.py  test_tools.py
