[project]
name = "maango-mcp"
version = "0.1.0"
description = "MCP server for the Maango AI Policy Registry"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
maango-mcp = "maango_mcp.server:main"
